# kampas

./: .gitignore  flake.nix  run_all.sh
frontend/: .env.example  .gitignore  docker-compose.yaml  package-lock.json  package.json
frontend/redis/: redis.conf
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/components/: add_enabler_button.svelte  add_measure_button.svelte  add_metric_button.svelte  add_tag_button.svelte  bar_chart.svelte  control_list_item.svelte  graph.svelte  navbar.svelte  round_gauge.svelte  tag.svelte  tag_control_button.svelte
frontend/src/lib/: costants.ts  session_cookies.ts  session_redis.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
kampas/: Cargo.toml  README.md  docker-compose.yaml
kampas/config/: Default.toml
kampas/src/: main.rs
kartrik/: Cargo.toml  README.md  docker-compose.yaml
kartrik/bindings/: RankOrdering.ts
kartrik/src/: main.rs
kartrik/src/endpoints/: controls.rs  mod.rs
kartrik/src/endpoints/auth/: expire.rs  mod.rs  register.rs  token.rs  token_middleware.rs  user_middleware.rs  whoami.rs
kartrik/src/endpoints/controls/: controls.rs  mod.rs  upload.rs
kartrik/src/endpoints/metrics/: metrics.rs
kartrik/src/endpoints/rankings/: ranking.rs
kartrik/src/endpoints/tags/: mod.rs  tag_control.rs  tags.rs
kartrik/src/helpers/: cryptography.rs  mod.rs  surrealdb.rs
kartrik/src/helpers/surrealdb/: connection.rs  control.rs  metric.rs  tag.rs  token.rs  user.rs
kartrik/src/models/: control.rs  metric.rs  mod.rs  ranking.rs  role.rs  tag.rs  token.rs  user.rs
(+101 files in other folders)
