[package]
name = "kartrik"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.4.1"
chrono = "0.4.24"
csv = "1.2.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
serde = { version = "1.0.163", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
thiserror = "1.0.40"
